--- a/examples/targeted_statem/rebar.config
+++ b/examples/targeted_statem/rebar.config
@@ -17,7 +17,7 @@
     {test, [
         {deps, [
             {proper, {git, "https://github.com/xspirus/proper.git",
-                      {branch, "targeted-stateful"}}}
+                      {branch, "fix/targeted"}}}
         ]}
     ]}
 ]}.
